assets/CSS/style.css
/* General Styles */
body {
    font-family: Arial, sans-serif;
    background-image: url("../images/bockchain-network-background.webp");
    background-color: #303030;
    color: #F0F1F2;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
}

/* Main Styles */
.container {
    width: 600px;
    background-color: #222226;
    padding: 15px;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
    text-align: center;
}

.container h1 {
    text-transform: capitalize;
}

.quiz-screen {
    display: none;
}

.container p {
    text-align: left;
    padding: 0 20px;
}

/* Start Page Styles */
#welcome-container div {
    display: flex;
    flex-direction: row;
}

#welcome-container i {
    align-self: center;
    padding-left: 20px;
}

/* Quiz Page Styles */
#question-container {
    background-color: #303030;
    padding: 20px;
    border-radius: 5px;
    margin-bottom: 20px;
}

#question-text {
    font-size: 24px;
    margin-bottom: 10px;
    text-align: center;
}

#options-list {
    list-style: none;
    padding: 0;
}

.option {
    margin: 10px;
    padding: 10px;
    background-color: #737672;
    border-radius: 5px;
    cursor: pointer;
}

/* Buttons */
#next-button, #start-button {
    padding: 10px 20px;
    background-color: #377E80;
    color: #F0F1F2;
    border: none;
    border-radius: 5px;
    font-size: 18px;
    cursor: pointer;
    margin-bottom: 5px;
}

#start-button {
    margin-top: 34px;
}

/* Footer Styles */
footer {
    background-color: #222226;
    color: #F0F1F2;
    position: absolute;
    bottom: 0;
    width: 100vw;
}

#footer-content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0 40px;
}

.social-networks {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    list-style-type: none;
    gap: 60px;
    padding-left: 0;
}

.social-networks i {
    font-size: 160%;
    color: #F0F1F2;
}

.footer-text {
    text-align: center;
    text-transform: uppercase;
}

/* Media query: mobile phones (376px and down) */
@media screen and (max-width: 376px) {

    /* General */

    body {
        display: block;
    }

    .container {
        background-color: transparent;
        box-shadow: none;
        padding: 0;
        width: 100%;
    }

    /* Start Screen */
    #welcome-container {
        margin-bottom: 20px;
        background-color: #222226;
        padding: 10px 20px;
    }

    #welcome-container div {
        flex-direction: column;
    }

    #welcome-container i {
        align-self: center;
        padding-top: 10px;
        padding-left: 0;
    }

    #welcome-container p {
        text-align: center;
        margin: 10px 0;
        padding: 0;
    }

    #start-button {
        margin-top: 0px;
    }

    /* Quiz Screen*/
    #question-container {
        border-radius: 0;
        height: 400px;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    #question-text {
        margin-top: 10px;
    }

    /* Footer */

    #footer-content {
        margin: 0 20px;
    }
    
    .social-networks {
        gap: 20px;
    }
    
    .social-networks i {
        font-size: 120%;
    }
    
    .footer-text {
        font-size: 75%;
        text-align: right;
    }
}

/* Media query: laptops and larger (992px and up) */
@media screen and (min-width: 992px) {

    /* Add hover effects */
    #next-button:hover, #start-button:hover {
        background-color: #F0F1F2;
        color: #377E80;
    }
    
    .option:hover {
        background-color: #bbb;
    }

    .social-networks i:hover {
        color: #377E80;
    }
}

